fixing scrollbar issue on ie

--- a/sites/all/themes/symbio/assets/scss/_custom.scss
+++ b/sites/all/themes/symbio/assets/scss/_custom.scss
@@ -901,7 +901,8 @@ select {
 }
 
 .masthead-nav {
-	overflow: hidden;
+	overflow: auto;
+	-ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 .tab-links,
